welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:2: error: not found: value c
  if ( (a<=19 && a>=13)&& (b>=19 || b<=13) && ( c>=19 || c<=19)){
                                                ^loneTeen:2: error: not found: value c
  if ( (a<=19 && a>=13)&& (b>=19 || b<=13) && ( c>=19 || c<=19)){
                                                         ^loneTeen:4: error: not found: value c
  } else if ( (b<=19 && b>=13)&& (a>=19 || a<=13) && ( c>=19 || c<=19)) {
                                                       ^loneTeen:4: error: not found: value c
  } else if ( (b<=19 && b>=13)&& (a>=19 || a<=13) && ( c>=19 || c<=19)) {
                                                                ^loneTeen:6: error: not found: value c
  } else if ( (c<=19 && c>=13)&& (b>=19 || b<=13) && ( a>=19 || a<=19)){
               ^loneTeen:6: error: not found: value c
  } else if ( (c<=19 && c>=13)&& (b>=19 || b<=13) && ( a>=19 || a<=19)){
                        ^